--- a/professores/templates/professores/professores.html
+++ b/professores/templates/professores/professores.html
@@ -4,21 +4,64 @@
   Data: 15 de Maio de 2019
 {% endcomment %}
 
-<h5>Alocações</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'orientacoes_alocadas' %}">Orientações</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'coorientacoes_alocadas' %}">Coorientações</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'bancas_alocadas' %}">Bancas</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'mentorias_alocadas' %}">Mentorias</a></div>
+<h5>
+  <span lang="pt">Alocações</span>
+  <span lang="en" style="display: none;">Assignments</span>
+</h5>
+
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'orientacoes_alocadas' %}">
+  <span lang="pt">Orientações</span>
+  <span lang="en" style="display: none;">Advisories</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'coorientacoes_alocadas' %}">
+  <span lang="pt">Coorientações</span>
+  <span lang="en" style="display: none;">Co-advisories</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'bancas_alocadas' %}">
+  <span lang="pt">Bancas</span>
+  <span lang="en" style="display: none;">Evaluation Boards</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'mentorias_alocadas' %}">
+  <span lang="pt">Mentorias</span>
+  <span lang="en" style="display: none;">Mentorships</span>
+</a></div>
 <br>
 
-<h5>Atividades do Orientador</h5>
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=planos_de_orientacao prazo=planos_de_orientacao__prazo %}</span> <a href="{% url 'planos_de_orientacao' %}">Planos de Orientação</a></div>
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=relatos_quinzenais %}</span> <a href="{% url 'relatos_quinzenais' %}">Relatos Quinzenais</a></div>
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=avaliar_entregas %}</span> <a href="{% url 'avaliar_entregas'%}">Avaliar Entregas</a></div>
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=bancas_index %}</span> <a href="{% url 'bancas_index'%}">Agendar Banca</a></div>
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=avaliacoes_pares %}</span> <a href="{% url 'avaliacoes_pares' %}">Avaliação de Pares</a></div>
+<h5>
+  <span lang="pt">Atividades do Orientador</span>
+  <span lang="en" style="display: none;">Advisor Activities</span>
+</h5>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=planos_de_orientacao prazo=planos_de_orientacao__prazo %}</span> <a href="{% url 'planos_de_orientacao' %}">
+  <span lang="pt">Planos de Orientação</span>
+  <span lang="en" style="display: none;">Advisory Plans</span>
+</a></div>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=relatos_quinzenais %}</span> <a href="{% url 'relatos_quinzenais' %}">
+  <span lang="pt">Relatos Quinzenais</span>
+  <span lang="en" style="display: none;">Biweekly Reports</span>
+</a></div>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=avaliar_entregas %}</span> <a href="{% url 'avaliar_entregas'%}">
+  <span lang="pt">Avaliar Entregas</span>
+  <span lang="en" style="display: none;">Evaluate Deliveries</span>
+</a></div>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=bancas_index %}</span> <a href="{% url 'bancas_index'%}">
+  <span lang="pt">Agendar Bancas</span>
+  <span lang="en" style="display: none;">Schedule Evaluation Boards</span>
+</a></div>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=avaliacoes_pares %}</span> <a href="{% url 'avaliacoes_pares' %}">
+  <span lang="pt">Avaliação de Pares</span>
+  <span lang="en" style="display: none;">Peer Evaluation</span>
+</a></div>
 <br>
 
-<h5>Notas</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'estudantes_notas' "meus_projetos" %}">Individuais</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'resultado_meus_projetos' %}">Grupo</a></div>
+<h5>
+  <span lang="pt">Notas</span>
+  <span lang="en" style="display: none;">Grades</span>
+</h5>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'estudantes_notas' "meus_projetos" %}">
+  <span lang="pt">Individuais</span>
+  <span lang="en" style="display: none;">Individual</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'resultado_meus_projetos' %}">
+  <span lang="pt">Grupo</span>
+  <span lang="en" style="display: none;">Group</span>
+</a></div>
