--- a/projetos/templates/projetos/index_projetos.html
+++ b/projetos/templates/projetos/index_projetos.html
@@ -12,6 +12,13 @@
 {% endblock %}
 
 {% block content %}
-<span class="titulo">Projetos</span>
-{% include "projetos/projetos.html" %}
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
+
+  {% include "projetos/projetos.html" %}
+  {% include "linguas.html" %}
+
 {% endblock %}
