--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -4,11 +4,25 @@
   Data: 15 de Dezembro de 2020
 {% endcomment %}
 
-
-<a href="{% url 'projetos_fechados' %}">Listagem Geral</a>
+<a href="{% url 'projetos_fechados' %}">
+  <span lang="pt">Listagem Geral</span>
+  <span lang="en" style="display: none;">General Listing</span>
+</a>
 <br><br>
 
-<h5>Análises</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projetos_vs_propostas' %}">Organizações, Projetos e Propostas</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'interesses_projetos' %}">Interesses com Projetos</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'filtro_projetos' %}">Filtro para Projetos</a></div>
+<h5>
+  <span lang="pt">Análises</span>
+  <span lang="en" style="display: none;">Analyses</span>
+</h5>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projetos_vs_propostas' %}">
+  <span lang="pt"> Organizações, Projetos e Propostas</span>
+  <span lang="en" style="display: none;">Organizations, Projects and Proposals</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'interesses_projetos' %}">
+  <span lang="pt">Interesses com Projetos</span>
+  <span lang="en" style="display: none;">Interests with Projects</span>
+</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'filtro_projetos' %}">
+  <span lang="pt">Filtro para Projetos</span>
+  <span lang="en" style="display: none;">Projects Filter</span>
+</a></div>
