--- a/templates/base.html
+++ b/templates/base.html
@@ -127,27 +127,72 @@
     
 
       <div id="links_menu_lat" class="links-container">
-        <a href="{% url 'info'%}">Informações</a>
         {% if user.is_authenticated %}
-          <a href="{% url 'perfil'%}">Perfil</a>
-          <a href="{% url 'index'%}">Geral</a>
-          <a href="{% url 'calendario'%}">Calendário</a>
+          <a href="#">
+            {% include "save_image.html" %}
+            {% include "impressora.html" %}
+          </a>
+        {% endif %}
+
+        <a href="{% url 'info'%}">
+          Informações
+        </a>
+        {% if user.is_authenticated %}
+          <a href="{% url 'perfil'%}">
+            <span lang="pt">Perfil</span>
+            <span lang="en" style="display: none;">Profile</span>
+          </a>
+          <a href="{% url 'index'%}">
+            <span lang="pt">Página Geral</span>
+            <span lang="en" style="display: none;">General Page</span>
+          </a>
+          <a href="{% url 'calendario'%}">
+            <span lang="pt">Calendário</span>
+            <span lang="en" style="display: none;">Calendar</span>
+          </a>
           {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-              <a href="{% url 'index_estudantes' %}">Área dos Estudantes</a>
+              <a href="{% url 'index_estudantes' %}">
+                <span lang="pt">Área dos Estudantes</span>
+                <span lang="en" style="display: none;">Students' Area</span>
+              </a>
           {% endif %}
         {% endif %}      
-        <a href="{% url 'index_organizacoes' %}">Área dos Parceiros</a>{% comment %} Deixa qualquer pessoa ver para submeter um projeto {% endcomment %}
+        <a href="{% url 'index_organizacoes' %}">
+          <span lang="pt">Área das Parceiros</span>
+          <span lang="en" style="display: none;">Partners' Area</span>
+        </a>{% comment %} Deixa qualquer pessoa ver para submeter um projeto {% endcomment %}
         {% if user.is_authenticated %}
           {% if perms.users.altera_professor %}
-            <a href="{% url 'index_professor'%}">Área do Professor</a>
-            <a href="{% url 'index_academica' %}">Área Acadêmica</a>
-            <a href="{% url 'index_operacional'%}">Área Operacional</a>
-            <a href="{% url 'index_administracao'%}">Área Administrativa</a>
-            <a href="{% url 'index_propostas'%}">Propostas</a>
-            <a href="{% url 'index_projetos'%}">Projetos</a>
+            <a href="{% url 'index_professor'%}">
+              <span lang="pt">Área do Professor</span>
+              <span lang="en" style="display: none;">Professor's Area</span>
+            </a>
+            <a href="{% url 'index_academica' %}">
+              <span lang="pt">Área Acadêmica</span>
+              <span lang="en" style="display: none;">Academic Area</span>
+            </a>
+            <a href="{% url 'index_operacional'%}">
+              <span lang="pt">Área Operacional</span>
+              <span lang="en" style="display: none;">Operational Area</span>
+            </a>
+            <a href="{% url 'index_administracao'%}">
+              <span lang="pt">Área Administrativa</span>
+              <span lang="en" style="display: none;">Administrative Area</span>
+            </a>
+            <a href="{% url 'index_propostas'%}">
+              <span lang="pt">Propostas</span>
+              <span lang="en" style="display: none;">Proposals</span>
+            </a>
+            <a href="{% url 'index_projetos'%}">
+              <span lang="pt">Projetos</span>
+              <span lang="en" style="display: none;">Projects</span>
+            </a>
           {% endif %}
         {% endif %}
-        <a href="{% url 'index_documentos'%}">Documentações</a>
+        <a href="{% url 'index_documentos'%}">
+          <span lang="pt">Documentos</span>
+          <span lang="en" style="display: none;">Documents</span>
+        </a>
 
         {% if user.is_authenticated %}
           <a href="{% url 'logout'%}">Logout</a>
@@ -161,7 +206,7 @@
     </div>
 
   </div>
-  <div style="margin-top: 6px;" class="container-fluid">
+  <div id="tudo" style="margin-top: 6px;" class="container-fluid">
     {% block content %}{% endblock %}
   </div>
   <p>&nbsp;</p>
