--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -60,7 +60,10 @@
                 {{ aluno.curso2 }}
               </td>
             {% else %}
-              <td><b>CURSO NÃO DEFINIDO</b></td>
+              <td><b>
+                <span lang="pt">CURSO NÃO DEFINIDO</span>
+                <span lang="en">COURSE NOT DEFINED</span>
+              </b></td>
             {% endif %}
             <td>
               <a href="mailto:{{aluno.user.email}}">{{aluno.user.email}}</a>
@@ -72,9 +75,20 @@
         {% endfor %}
         </tbody>
         <caption style="text-align: left">
-          <text class="text-success">&#x2B24;</text> Estudante já selecionou propostas ({{inscritos}}) [{% widthratio inscritos num_alunos 100 %}%]<br>
-          <text class="text-warning">&#x2B24;</text> Estudante realizou seleção provisória ({{tmpinscritos}}) [{% widthratio tmpinscritos num_alunos 100 %}%]<br>
-          <text class="text-danger">&#x2B24;</text> Estudante ainda precisa selecionar propostas ({{ninscritos}}) [{% widthratio ninscritos num_alunos 100 %}%]<br>      
+          <text class="text-success">&#x2B24;</text>
+          <span lang="pt">Estudante já selecionou propostas</span>
+          <span lang="en">Student already selected proposals</span>
+          ({{inscritos}}) [{% widthratio inscritos num_alunos 100 %}%]<br>
+
+          <text class="text-warning">&#x2B24;</text> 
+          <span lang="pt">Estudante realizou seleção provisória</span>
+          <span lang="en">Student performed temporary selection</span>
+          ({{tmpinscritos}}) [{% widthratio tmpinscritos num_alunos 100 %}%]<br>
+          
+          <text class="text-danger">&#x2B24;</text>
+          <span lang="pt">Estudante ainda precisa selecionar propostas</span>
+          <span lang="en">Student still needs to select proposals</span>
+          ({{ninscritos}}) [{% widthratio ninscritos num_alunos 100 %}%]<br>
         </caption>
       </table>
     </div>
