reorganizando titulos não puros

--- a/templates/documento-modal.html
+++ b/templates/documento-modal.html
@@ -4,11 +4,11 @@
   Data: 1 de Junho de 2021
 {% endcomment %}
 
-<style>
+{% comment %} <style>
   .open-documento {
     cursor: pointer;
   }
-</style>
+</style> {% endcomment %}
 
 <script>
   var documento;
