--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -35,13 +35,6 @@
   <span class="titulo">
     <span lang="pt">{{ titulo.pt }}</span>
     <span lang="en">{{ titulo.en }}</span>
-    {% if user.tipo_de_usuario == 4 %}
-      <small class="esconder">
-        <a class="open-documento" style="cursor:pointer;"
-           data-url="{% url 'adiciona_documento' %}"
-           >&#10133;</a>
-      </small>
-    {% endif %}
   </span>
 
   {% include "edicoes.html" with com_cursos=True %}
@@ -186,6 +179,16 @@
       </table>
     </div>
   </div>
+
+  {% if user.tipo_de_usuario == 4 %}
+    <span class="esconder">
+      <a 
+      href="#"
+      class="open-documento" style="cursor:pointer;"
+          data-url="{% url 'adiciona_documento' %}"
+          ><i class="fas fa-plus"></i> Adicionar novo documento</a>
+    </span>
+  {% endif %}
 
   <script>
     function carrega_pagina() {
