--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -216,6 +216,11 @@ table, th, td {
   user-select: none;
 }
 
+.lh-1 {
+  display: inline-block;
+  line-height: 1.0;
+}
+
 @media only screen and (max-width: 740px) {
   table, th, td {
     font-size: 14px;
