--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -41,6 +41,11 @@
 
 {% block content %}
 
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
+
   {% with completo=True %}
     {% include "proposta.html" %}
   {% endwith %}
