--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -134,9 +134,9 @@
               </strong>
             </div>
             {% for item in entregas %}
-            {% with dias_ate=item.evento.data_aval|dif_dias_hoje dias=-1 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
+            {% with dias_inic=item.evento.data_inicio_aval|dif_dias_hoje dias_ate=item.evento.data_aval|dif_dias_hoje dias=-1 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
               <div class="pintern exame{{item.composicao.exame.id}}" {% if not forloop.first %}style="margin-top: 8px;"{% endif %}>
-                <span class="nome_entrega" {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+                <span class="nome_entrega" {% if dias_inic > dias %}style="color:lightgrey;"{% endif %}>
                   {% if item.composicao.tipo_documento %}
                     <b>{{item.composicao.tipo_documento.nome}}</b> 
                   {% else %}
@@ -159,20 +159,20 @@
                 {% if item.composicao.exame.grupo %}
                   <ul style="margin-bottom: 2px; padding-left: 22px;" 
                     class="
-                      {% if item.avaliacoes and item.avaliacoes.first%}
+                      {% if item.avaliacoes and item.avaliacoes.first %}
                         {% if documento.data > item.avaliacoes.first.momento %}redish{% endif %}
                       {% else %}
                         {% if dias_ate < prazo_avaliar %}redish
                         {% elif item.evento.endDate < hoje %}yellowish{% endif %}
                       {% endif %}
-                      {% if dias_ate > dias %}lightgrey{% endif %}
+                      {% if dias_inic > dias %}lightgrey{% endif %}
                     ">
                     {% for documento in item.documentos %}
-                      <li style="list-style-type:'';" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
+                      <li style="list-style-type:'';" {% if dias_inic > dias %}class="lightgrey"{% endif %}>
                         {% if forloop.first%}<b>{% endif %}
                         {% if documento.documento or documento.link %}
                           <a {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
-                           {% if dias_ate > dias %}class="lightgrey"{% endif %}
+                           {% if dias_inic > dias %}class="lightgrey"{% endif %}
                            href="{% url 'entrega_avaliar' item.composicao.id projeto.id %}"
                            target="_blank" rel="noopener noreferrer">
                             <span class="fas fa-archive"></span>
@@ -205,7 +205,7 @@
                       {% endif %}
                     {% empty %}
                       {% if item.composicao.tipo_documento %}
-                        <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+                        <span {% if dias_inic > dias %}style="color:lightgrey;"{% endif %}>
                           <span lang="pt">sem arquivos</span>
                           <span lang="en">no files</span>
                         </span><br>
@@ -217,7 +217,7 @@
                 {% else %}
                   {% for alocacao, values in item.alocacoes.items %}
                     <hr class="linha">
-                    <b class="{% if dias_ate > dias %}lightgrey{% endif %} nome_est">&#10040; {{alocacao.aluno.user.get_full_name}}:</b>
+                    <b class="{% if dias_inic > dias %}lightgrey{% endif %} nome_est">&#10040; {{alocacao.aluno.user.get_full_name}}:</b>
                     <ul style="margin-bottom: 0px; padding-left: 32px;"
                       class="
                         {% if values.avaliacoes and values.avaliacoes.first%}
@@ -226,14 +226,14 @@
                           {% if dias_ate < prazo_avaliar %}redish
                           {% elif item.evento.endDate < hoje %}yellowish{% endif %}
                         {% endif %}
-                        {% if dias_ate > dias %}lightgrey{% endif %}
+                        {% if dias_inic > dias %}lightgrey{% endif %}
                       ">
                       {% for documento in values.documentos %}
-                        <li style="list-style-type:'';" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
+                        <li style="list-style-type:'';" {% if dias_inic > dias %}class="lightgrey"{% endif %}>
                           {% if forloop.first%}<b>{% endif %}
                           {% if documento.documento or documento.link %}
                             <a {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {% if documento.usuario %}{{documento.usuario.get_full_name}}{% else %}(ERRO AO IDENTIFICAR ESTUDANTE){% endif %}"{% endif %}
-                             {% if dias_ate > dias %}class="lightgrey"{% endif %}
+                             {% if dias_inic > dias %}class="lightgrey"{% endif %}
                              href="{% url 'entrega_avaliar' item.composicao.id projeto.id documento.usuario.id %}"
                              target="_blank" rel="noopener noreferrer">
                               <span class="fa fa-file"></span>
@@ -265,7 +265,7 @@
                         {% endif %}
                       {% empty %}
                         {% if item.composicao.tipo_documento %}
-                          <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+                          <span {% if dias_inic > dias %}style="color:lightgrey;"{% endif %}>
                             <span lang="pt">sem arquivos</span>
                             <span lang="en">no files</span>
                           </span><br>
